--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,52 @@
     <artifactId>designpatterns</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
+    <properties>
+            <jfx.version>14</jfx.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
-        <dependency>
+            <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-base</artifactId>
+                <version>11</version>
+            </dependency>
+
+
+
+            <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId>
-            <version>15-ea+4</version>
-            <type>pom</type>
+            <artifactId>javafx-graphics</artifactId>
+            <version>${jfx.version}</version>
         </dependency>
+
+
     </dependencies>
 
+    </dependencyManagement>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.4</version>
+                    <configuration>
+                        <mainClass>HelloFX</mainClass>
+                    </configuration>
+                </plugin>
+            </plugins>
+    </build>
 </project>
