--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.openjfx</groupId>
-    <artifactId>hellofx</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.nhlstenden.designpatterns</groupId>
+    <artifactId>designpatterns</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
-        <javafx.version>13</javafx.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <javafx.version>14</javafx.version>
+        <javafx.compiler.version>0.0.4</javafx.compiler.version>
     </properties>
     <dependencies>
         <dependency>
@@ -26,7 +28,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven.compiler.version}</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
                 </configuration>
@@ -34,12 +36,12 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.3</version>
+                <version>${javafx.compiler.version}</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
-                    <jlinkImageName>hellofx</jlinkImageName>
+                    <jlinkImageName>designpatterns</jlinkImageName>
                     <launcher>launcher</launcher>
-                    <mainClass>hellofx/org.openjfx.App</mainClass>
+                    <mainClass>com.nhlstenden.designpatterns.App</mainClass>
                 </configuration>
             </plugin>
         </plugins>
