--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,16 @@
+<!--suppress MavenModelInspection -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nhlstenden.designpatterns</groupId>
     <artifactId>designpatterns</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>11</maven.compiler.release>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <javafx.version>14</javafx.version>
-        <javafx.compiler.version>0.0.4</javafx.compiler.version>
+        <javafx.compiler.version>0.0.3</javafx.compiler.version>
     </properties>
     <dependencies>
         <dependency>
